@@ -1,3 +1,9 @@
+1999-01-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amflush.c: write debuging info to $logdir/amflush
+	instead of /dev/null if we run in background.
+	* server-src/amcleanup.sh.in: rename $logdir/amflush.
+
 1999-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/amstatus.pl.in: fix a divide by zero error.
